# OpenGLDemo

./: CMakeLists.txt  Makefile  compile_commands.json  main
.cache/clangd/index/: main.cc.30D5506BC987B149.idx
include/: mathcore.h  translation.h  util.h
ply/: untitled.x3d
shader/: shader.frag  shader.vert
src/: main.cc  mathcore.cc  translation.cc  util.cc
